--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,12 @@ requires-python = ">=3.13"
 dependencies = [
     "pydantic>=2.12.4",
 ]
+
+[dependency-groups]
+dev = [
+    "hatch>=1.15.1",
+    "pytest-cov>=7.0.0",
+]
+
+[tool.hatch.envs.default.scripts]
+test = "pytest --cov=dotfiles_manager src/tests/"
