`pytest` is now able to discover the packages in `src`
- Added the `src/` direcotry to the `pythonpath` in the `pytest` config section
  of `pyproject.toml`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,8 @@ dev = [
     "pytest-cov>=7.0.0",
 ]
 
+[tool.pytest.ini_options]
+pythonpath = ["src/"]
+
 [tool.hatch.envs.default.scripts]
 test = "pytest --cov=dotfiles_manager src/tests/"
