Added the `testlog` script to enable print statements for debugging.
- The script accepts additional paths to specify single files or functions to
  run.
- Printing the header is skipped.
- All Logging and errors are passed to the console.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,10 @@ pythonpath = ["src/"]
 
 [tool.hatch.envs.default.scripts]
 test = "pytest --cov=dotfiles_manager src/tests/"
+testlog = """
+    pytest \
+        --no-header \
+        --log-level=DEBUG --log-cli-level=DEBUG \
+        --capture=no \
+        src/tests/{args}
+"""
