--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,12 @@ dev = [
 [tool.pytest.ini_options]
 pythonpath = ["src/"]
 
+[tool.basedpyright]
+include = ["src"]
+executionEnvironments = [
+    {root = "src"}
+]
+
 [tool.mypy]
 plugins = [
     "mypy.plugins.proper_plugin",
