--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
 dev = [
     "basedpyright>=1.34.0",
     "hatch>=1.15.1",
+    "ipython>=9.7.0",
     "mypy>=1.17.1",
     "pytest-cov>=7.0.0",
     "pytest-mock>=3.15.1",
