--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,9 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "basedpyright>=1.34.0",
     "hatch>=1.15.1",
     "ipython>=9.7.0",
-    "mypy>=1.17.1",
+    "pyrefly>=0.42.3",
     "pytest-cov>=7.0.0",
     "pytest-mock>=3.15.1",
     "ruff>=0.14.6",
@@ -22,17 +21,6 @@ dev = [
 
 [tool.pytest.ini_options]
 pythonpath = ["src/"]
-
-[tool.basedpyright]
-include = ["src"]
-executionEnvironments = [
-    {root = "src"}
-]
-
-[tool.mypy]
-plugins = [
-    "mypy.plugins.proper_plugin",
-]
 
 [tool.hatch.envs.default.scripts]
 test = "pytest --cov=dot_vault src/tests/"
@@ -43,7 +31,7 @@ testlog = """
         --capture=no \
         src/tests/{args}
 """
-typecheck = "ty check"
+typecheck = "pyrefly check"
 check = [
     "hatch run test",
     "hatch run typecheck"
