Added the `lint` script with `ruff`.
The script is also added to the `check` script.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,12 @@ testlog = """
         --capture=no \
         src/tests/{args}
 """
+lint = "ruff check"
 typecheck = "pyrefly check"
 check = [
     "hatch run test",
-    "hatch run typecheck"
+    "hatch run typecheck",
+    "hatch run lint"
 ]
 
 [tool.pyrefly]
