--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
 dev = [
     "hatch>=1.15.1",
     "ipython>=9.7.0",
+    "mypy>=1.17.1",
     "pyrefly>=0.42.3",
     "pytest-cov>=7.0.0",
     "pytest-mock>=3.15.1",
@@ -32,7 +33,12 @@ testlog = """
         src/tests/{args}
 """
 lint = "ruff check"
-typecheck = "pyrefly check"
+typecheck-mypy = "mypy src"
+typecheck-pyrefly = "pyrefly check"
+typecheck = [
+    "typecheck-mypy",
+    "typecheck-pyrefly"
+]
 check = [
     "hatch run test",
     "hatch run typecheck",
@@ -43,3 +49,12 @@ check = [
 project-includes = ["src"]
 search-path = ["src"]
 python-interpreter-path = ".venv/bin/python3"
+
+[tool.mypy]
+plugins = ["returns.contrib.mypy.returns_plugin"]
+check_untyped_defs = true
+
+[[tool.mypy.overrides]]
+module = ["pytest.*", "pytest_mock.*"]
+follow_untyped_imports = true
+ignore_missing_imports = true
